Updated README with new functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,7 @@ You can webscrape all prior Hottest 100 Countdown results (including Hottest 100
 
 ```{r message = FALSE, eval = FALSE, warning = FALSE}
 library(hotteR)
+
 countdown_data <- get_countdowns()
 ```
 
@@ -40,6 +41,7 @@ A full dataset of all previous Hottest 100 Countdowns available to-date comes re
 
 ```{r message = FALSE, eval = FALSE, warning = FALSE}
 library(hotteR)
+
 historical_countdowns
 ```
 
@@ -64,6 +66,7 @@ You can automatically pull summed counts of plays from the @triplejplays Twitter
 
 ```{r message = FALSE, eval = FALSE, warning = FALSE}
 library(hotteR)
+
 play_data <- get_plays(year = 2020)
 ```
 
@@ -73,16 +76,62 @@ You can automatically get some high level analysis and data visualisations for d
 
 ```{r message = FALSE, eval = FALSE, warning = FALSE}
 library(hotteR)
+
 play_data <- get_plays(year = 2020)
 do_plays_analysis(the_plays)
 ```
 
-### theme_hotteR
+### calculate_priors()
+
+Bayesian functionality is built into the package given the annually updating nature of the Hottest 100 Countdown. All Bayesian functions have been coded in the probabilistic programming language `Stan` and abstracted away into a one line R function for ease of use. The first function is `calculate_priors()` which computes a mean, standard deviation (SD), 2.5% credible interval lower bound and 97.5% credible interval upper bound (together forming a 95% credible interval) for an ordinal logistic regression model of quartile placement in the Hottest 100. The mean and SD calculated by this function can be used as informative priors in a predictive model. This function takes one of two timescales as an argument:
+
+* "Last Decade"
+* "All Time"
+
+```{r message = FALSE, eval = FALSE, warning = FALSE}
+library(tidyverse)
+library(rstan)
+library(hotteR)
+
+priors <- calculate_priors(timescale = "All Time")
+```
+
+### plot_priors()
+
+As well as the formal value calculation of priors, a calculation and distribution visualisation function is also included as `plot_priors()`. This function produces a density plot of the coefficient for the nationality predictor variable. This function takes one of two timescales as an argument:
+
+* "Last Decade"
+* "All Time"
+
+```{r warning = FALSE, message = FALSE, error = FALSE, results = 'hide', fig.keep = TRUE}
+library(tidyverse)
+library(rstan)
+library(hotteR)
+
+plot_prior(timescale = "All Time")
+```
+
+### plot_probabilities()
+
+You can automatically produce density plots of probability of belongingness by Hottest 100 Countdown quartile and nationality with `plot_probabilities()`. This function takes one of two timescales as an argument:
+
+* "Last Decade"
+* "All Time"
+
+```{r message = FALSE, warning = FALSE, fig.keep = TRUE}
+library(tidyverse)
+library(hotteR)
+
+plot_probabilities(timescale = "Last Decade")
+```
+
+### theme_hotteR()
 
 As well as data scraping and analysis functions, `hotteR` also provides a distinct and striking contrasting colour palette that is called and used by default when the package is loaded.
 
 ```{r message = FALSE}
 library(scales)
+
 scales::show_col(hotteR:::hotteR_palette)
 ```
 
